--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -119,5 +119,5 @@ The proposal inarticulately stated another objective to build a mechanism which 
     \item[Section 7] reflects on the project outcome and possible future work.
     \item[Appendix A] contains the bibliographical references of the report.
     \item[Appendix B] offers user manuals of the various systems implemented.
-    \item[Appendix C] lists the source code written by myself for this project.
+    \item[Appendix C] lists the source code written for this project.
 \end{description}
