written magento section

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -1,3 +1,11 @@
+@MISC{aheadworks14,
+    AUTHOR       = {{AheadWorks}},
+    TITLE        = {E-commerce Platforms Popularity Study, October 2014},
+    HOWPUBLISHED = {http://blog.aheadworks.com/2014/10/e-commerce-platforms-share-investigation-october-2014/},
+    NOTE         = {Accessed August 30, 2015},
+    YEAR         = {2014}
+}
+
 @ARTICLE{herlocker04,
     AUTHOR    = {Herlocker, J. L. and Konstan, J. A. and Terveen, L. G. and Riedl, J. T.},
     TITLE     = {Evaluating collaborative filtering recommender systems},
