acknowledgements, removed sections

--- a/sections/acknowledgements.tex
+++ b/sections/acknowledgements.tex
@@ -1,11 +1,5 @@
 \chapter*{Acknowledgements}
 
-\emph{Status: Not Started. Last Step}
+Before anything, I would like to extend my thanks to my supervisor, Dr Nigel Martin, who has been a great support from the very start to the end. Also, I want to acknowledge my boss, Edward Griffith, for accomodating me to study while working.
 
-\begin{itemize}
-\item Supervisor ack.
-\item Birkbeck ack. - providing flexible education for almost two centuries
-\item Parents - who worked hard to educate their children
-\item Wife
-\item Child - shared my attention in its first weeks
-\end{itemize}
+My sincerest gratitude are to my parents for their uninterrupted believe in me, my wife for her endless patience and my son/daughter for sharing my attention with this thesis in her/his first two weeks.
