--- a/sections/testing.tex
+++ b/sections/testing.tex
@@ -16,10 +16,6 @@
 
 \emph{Status: Not Started}
 
-\section{Integrating Application: Magento}
-
-\emph{Status: Not Started}
-
-\section{Provisioning}
+\section{Demo Domain System: Magento}
 
 \emph{Status: Not Started}
