--- a/includes/references.bib
+++ b/includes/references.bib
@@ -6,6 +6,13 @@
     YEAR         = {2014}
 }
 
+@phdthesis{fielding00,
+  title={Architectural styles and the design of network-based software architectures},
+  author={Fielding, Roy Thomas},
+  year={2000},
+  school={University of California}
+}
+
 @ARTICLE{herlocker04,
     AUTHOR    = {Herlocker, J. L. and Konstan, J. A. and Terveen, L. G. and Riedl, J. T.},
     TITLE     = {Evaluating collaborative filtering recommender systems},
