--- a/includes/config.tex
+++ b/includes/config.tex
@@ -18,6 +18,7 @@
 \usepackage{colortbl}
 \usepackage{hhline}
 \usepackage{hyperref}
+\usepackage{upquote}
 \usepackage[export]{adjustbox}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage[font=small]{caption}
